Add support for netstandard2.0
Test now target also net48

--- a/ContractCompatibility/ContractCompatibility.csproj
+++ b/ContractCompatibility/ContractCompatibility.csproj
@@ -1,9 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
+        <TargetFrameworks>net9.0;netstandard2.0</TargetFrameworks>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <LangVersion>13</LangVersion>
 
         <SignAssembly>true</SignAssembly>
         <AssemblyOriginatorKeyFile>../ContractCompatibility.snk</AssemblyOriginatorKeyFile>
